# serializer version: 1
# name: test_closed_stream_handler_drops_records
  list([
  ])
# ---
# name: test_stream_handler_processes_logs_from_n_threads[100]
  list([
    'test [INFO] message 0',
    'test [INFO] message 1',
    'test [INFO] message 2',
    'test [INFO] message 3',
    'test [INFO] message 4',
    'test [INFO] message 5',
    'test [INFO] message 6',
    'test [INFO] message 7',
    'test [INFO] message 8',
    'test [INFO] message 9',
    'test [INFO] message 10',
    'test [INFO] message 11',
    'test [INFO] message 12',
    'test [INFO] message 13',
    'test [INFO] message 14',
    'test [INFO] message 15',
    'test [INFO] message 16',
    'test [INFO] message 17',
    'test [INFO] message 18',
    'test [INFO] message 19',
    'test [INFO] message 20',
    'test [INFO] message 21',
    'test [INFO] message 22',
    'test [INFO] message 23',
    'test [INFO] message 24',
    'test [INFO] message 25',
    'test [INFO] message 26',
    'test [INFO] message 27',
    'test [INFO] message 28',
    'test [INFO] message 29',
    'test [INFO] message 30',
    'test [INFO] message 31',
    'test [INFO] message 32',
    'test [INFO] message 33',
    'test [INFO] message 34',
    'test [INFO] message 35',
    'test [INFO] message 36',
    'test [INFO] message 37',
    'test [INFO] message 38',
    'test [INFO] message 39',
    'test [INFO] message 40',
    'test [INFO] message 41',
    'test [INFO] message 42',
    'test [INFO] message 43',
    'test [INFO] message 44',
    'test [INFO] message 45',
    'test [INFO] message 46',
    'test [INFO] message 47',
    'test [INFO] message 48',
    'test [INFO] message 49',
    'test [INFO] message 50',
    'test [INFO] message 51',
    'test [INFO] message 52',
    'test [INFO] message 53',
    'test [INFO] message 54',
    'test [INFO] message 55',
    'test [INFO] message 56',
    'test [INFO] message 57',
    'test [INFO] message 58',
    'test [INFO] message 59',
    'test [INFO] message 60',
    'test [INFO] message 61',
    'test [INFO] message 62',
    'test [INFO] message 63',
    'test [INFO] message 64',
    'test [INFO] message 65',
    'test [INFO] message 66',
    'test [INFO] message 67',
    'test [INFO] message 68',
    'test [INFO] message 69',
    'test [INFO] message 70',
    'test [INFO] message 71',
    'test [INFO] message 72',
    'test [INFO] message 73',
    'test [INFO] message 74',
    'test [INFO] message 75',
    'test [INFO] message 76',
    'test [INFO] message 77',
    'test [INFO] message 78',
    'test [INFO] message 79',
    'test [INFO] message 80',
    'test [INFO] message 81',
    'test [INFO] message 82',
    'test [INFO] message 83',
    'test [INFO] message 84',
    'test [INFO] message 85',
    'test [INFO] message 86',
    'test [INFO] message 87',
    'test [INFO] message 88',
    'test [INFO] message 89',
    'test [INFO] message 90',
    'test [INFO] message 91',
    'test [INFO] message 92',
    'test [INFO] message 93',
    'test [INFO] message 94',
    'test [INFO] message 95',
    'test [INFO] message 96',
    'test [INFO] message 97',
    'test [INFO] message 98',
    'test [INFO] message 99',
  ])
# ---
# name: test_stream_handler_processes_logs_from_n_threads[10]
  list([
    'test [INFO] message 0',
    'test [INFO] message 1',
    'test [INFO] message 2',
    'test [INFO] message 3',
    'test [INFO] message 4',
    'test [INFO] message 5',
    'test [INFO] message 6',
    'test [INFO] message 7',
    'test [INFO] message 8',
    'test [INFO] message 9',
  ])
# ---
# name: test_stream_handler_processes_logs_from_n_threads[1]
  list([
    'test [INFO] message 0',
  ])
# ---
